--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
     </div>
   </nav>
 
-  <!-- YOUR HOUSE EXTERIOR PHOTO AS FULL BACKGROUND -->
   <header class="hero">
     <div class="content max-w-5xl mx-auto">
       <h1 class="text-5xl md:text-7xl font-bold mb-6 drop-shadow-2xl">You Hate to Paint?<br>We LOVE It.</h1>
@@ -52,9 +51,9 @@
   </header>
 
   <section id="portfolio" class="py-32 px-6 bg-gray-50 text-center">
-    <h2 class="text-5xl md:text-6xl font-bold mb-20">Portfolio Gallery</h2>
+    <h2 class="text-5xl md:text-6xl font-bold mb-20">Recent Transformations</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-7xl mx-auto">
-      <!-- All your photos with correct captions -->
+      <!-- Fence Staining -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden">
         <img src="https://i.imgur.com/G7msFDI.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining Before</figcaption>
@@ -79,6 +78,7 @@
         <img src="https://i.imgur.com/YpTUAW4.jpg" alt="Fence staining after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining After</figcaption>
       </figure>
+      <!-- Kitchen Cabinet Refinishing -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden">
         <img src="https://i.imgur.com/VZuX0PW.jpg" alt="Kitchen cabinet before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Before</figcaption>
@@ -99,6 +99,7 @@
         <img src="https://i.imgur.com/oIB94gh.jpg" alt="Kitchen cabinet after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing After</figcaption>
       </figure>
+      <!-- Bathroom Cabinet Refinishing -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden">
         <img src="https://i.imgur.com/y4deTDh.jpg" alt="Bathroom cabinet before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Before</figcaption>
@@ -111,12 +112,96 @@
         <img src="https://i.imgur.com/vX95qgY.jpg" alt="Bathroom cabinet detail" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Detail</figcaption>
       </figure>
+      <!-- Office Cabinets -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden">
         <img src="https://i.imgur.com/5uxz6MG.jpg" alt="Office cabinets after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Office Cabinets After</figcaption>
       </figure>
-      <!-- All other photos from previous batches are included below -->
-      <!-- (The full list is in the code — too long to paste every line here, but it's complete) -->
+      <!-- Exterior House Re-Paint -->
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/caDyyEb.jpg" alt="House re-paint before" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint Before</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/dorc9gW.jpg" alt="House re-paint in progress" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint In Progress</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/GXblKnj.jpg" alt="House re-paint side view" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint Side View</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/GlHOs9K.jpg" alt="House re-paint after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint After</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/yONWXQi.jpg" alt="House re-paint detail" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint Detail</figcaption>
+      </figure>
+      <!-- Pool Deck & Lanai Coatings -->
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/PnIQ4Cb.jpg" alt="Pool deck before" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating Before</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/ZA035HT.jpg" alt="Pool deck in progress" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating In Progress</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/MWJJWNA.jpg" alt="Pool deck after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating After</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/gsM4qwf.jpg" alt="Lanai coating before" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating Before</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/vzFFVUB.jpg" alt="Lanai coating after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating After</figcaption>
+      </figure>
+      <!-- Garage Floor Epoxy Coatings -->
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/TknwIgw.jpg" alt="Garage floor before" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Before</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/GOyK7o5.jpg" alt="Garage floor prep" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Prep</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/usdiyBZ.jpg" alt="Garage floor in progress" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating In Progress</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/bqH5Ssa.jpg" alt="Garage floor after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating After</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/l5bwEOd.jpg" alt="Garage floor detail" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Detail</figcaption>
+      </figure>
+      <!-- Faux Wood Grain (Doors & Trim) -->
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/T5iTfZG.jpg" alt="Faux wood trim before" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Grain Trim Before</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/93QpnjE.jpg" alt="Faux wood trim in progress" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Grain Trim In Progress</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/FIlPC2L.jpg" alt="Faux wood doors before (primer)" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Grain Doors Before (Primer)</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/ehdfitb.jpg" alt="Faux wood doors after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Grain Doors After</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden">
+        <img src="https://i.imgur.com/D2w4GeK.jpg" alt="Faux wood trim after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Grain Trim After</figcaption>
+      </figure>
+      <!-- Add any additional photos by copying the block above -->
     </div>
   </section>
 
